# beets-vrdj

./: .gitignore  README.md  README.org  pyproject.toml
src/beetsplug/: faiss.py  vggish.py
